# mysql_sphere

./: CMakeLists.txt  NOTICE  README  deinstall_udfs.sql  install_udfs.sql  mysql_sphere.sublime-project  mysql_sphere.sublime-workspace  mysql_sphere_udf_list.csv  uninstall_udfs.sql
doc/: appendixes.html  construct.html  examples.html  faq.html  funcs.html  index.html  indices.html  installation.html  operators.html  sphere.css  types.html  whatis.html  x1240.html  x18.html  x44.html
src/: box.cc  box.h  circle.cc  circle.h  ellipse.cc  ellipse.h  euler.cc  euler.h  globals.h  line.cc  line.h  output.cc  output.h  path.cc  path.h  point.cc  point.h  polygon.cc  polygon.h  sbuffer.cc  sbuffer.h  serialiser.cc  serialiser.h  serialiser_helper.h  sparse.cc  sparse.y  types.h  udf_helpers.h  udf_sphere.cc  udf_sphere.h  udf_sphere_area.cc  udf_sphere_box.cc  udf_sphere_center.cc  udf_sphere_circle.cc  udf_sphere_circum.cc  udf_sphere_dist.cc  udf_sphere_ellipse.cc  udf_sphere_euler.cc  udf_sphere_length.cc  udf_sphere_line.cc  (+10 more)
test/expected/: box.sql.out  circle.sql.out  circle_extended.sql.out  ellipse.sql.out  euler.sql.out  line.sql.out  path.sql.out  points.sql.out  poly.sql.out
test/setup/: test_spherebox.sql  test_spherecircle.sql  test_spherepath.sql  test_spherepoint.sql  test_spherepolygon.sql
test/test/: box.sql  circle.sql  circle_extended.sql  ellipse.sql  euler.sql  line.sql  path.sql  points.sql  poly.sql
